gccida/g3/gen_lowpart_common
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1288:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart_common( machine_mode mode, rtx x) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1292:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1301:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1301:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1317:6: error: use of undeclared identifier 'slot_with_hash'
rtx *slot_with_hash; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1320:1: error: use of undeclared identifier '__m256i'
__m256i u; // [rsp+20h] [rbp-48h] OVERLAPPED BYREF 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1340:28: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = *( ( unsigned int *)&mode_class_0 + v2); 
                           ^~~~~~~~~~~~
                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1364:1: error: use of undeclared identifier 'result'
result = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1366:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1372:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1373:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v29 = ( __int64)rtx[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1375:1: error: use of undeclared identifier 'u'
u.m256i_i64[0] = v29; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1378:1: error: use of undeclared identifier 'slot_with_hash'
slot_with_hash = ( rtx *)htab_find_slot_with_hash( ( __int64)const_int_htab, ( __int64)&u, v29, 1); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1378:25: error: expected expression
slot_with_hash = ( rtx *)htab_find_slot_with_hash( ( __int64)const_int_htab, ( __int64)&u, v29, 1); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1379:8: error: use of undeclared identifier 'slot_with_hash'
if ( !*slot_with_hash ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1380:55: error: use of undeclared identifier 'u'
*slot_with_hash = gen_rtx_fmt_w( CONST_INT, VOIDmode, u.m256i_i64[0]); 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1380:2: error: use of undeclared identifier 'slot_with_hash'
*slot_with_hash = gen_rtx_fmt_w( CONST_INT, VOIDmode, u.m256i_i64[0]); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1381:9: error: use of undeclared identifier 'slot_with_hash'
return *slot_with_hash; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/emit-rtl.c:1389:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( __int64)rtx[1]; 
                   ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_lowpart_common/src/obj/emit-rtl.o] Error 1
